--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,17 @@
-version: 2
-
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
 jobs:
-  build:
-    docker:
-      - image: circleci/node:8.5.0-browsers
+  build-and-test:
+    executor:
+      name: node/default
     steps:
       - checkout
-      - restore_cache:
-          key: node-modules-{{ checksum "package.json" }}
-      - run:
-          name: Start test
-          command: |
-            npm install
-            npm run test
-      - save_cache:
-          key: node-modules-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-      - store_artifacts:
-          path: ./screenshot/
-          destination: screenshots
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm test
+workflows:
+    build-and-test:
+      jobs:
+        - build-and-test
