--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+  puppeteer: threetreeslight/puppeteer@0.1.2
 jobs:
-  build-and-test:
+  end-to-end-test:
     executor:
-      name: node/default
+      name: puppeteer/default
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
+      - run:
+          name: Run test
+          command: |
+            npm install
+            npm run test
 workflows:
-    build-and-test:
+    end-to-end-test:
       jobs:
-        - build-and-test
+        - end-to-end-test
