--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,26 @@
-version: 2.1
-orbs:
-  puppeteer: threetreeslight/puppeteer@0.1.2
+version: 2
+
 jobs:
-  end-to-end-test:
-    executor:
-      name: puppeteer/default
+  build:
+    docker:
+      - image: circleci/node:8.5.0-browsers
+      - image: circleci/mongo:3.4
     steps:
       - checkout
+      - restore_cache:
+          key: node-modules-{{ checksum "package.json" }}
+      - restore_cache:
+          key: sut-node-modules-{{ checksum "packages/package.json" }}
       - run:
-          name: Run test
+          name: Start app and test
           command: |
             npm install
             npm run test
-workflows:
-    end-to-end-test:
-      jobs:
-        - end-to-end-test
+      - save_cache:
+          key: node-modules-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+      - save_cache:
+          key: sut-node-modules-{{ checksum "packages/package.json" }}
+          paths:
+            - ./packages/node_modules/
