--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,17 @@
-version: 2
-
 jobs:
-  build:
-    docker:
-      - image: circleci/node:8.5.0-browsers
-      - image: circleci/mongo:3.4
+  test:
+    executor:
+      name: node/default
+      tag: '12.12.0'
     steps:
       - checkout
-      - restore_cache:
-          key: node-modules-{{ checksum "package.json" }}
-      - restore_cache:
-          key: sut-node-modules-{{ checksum "packages/package.json" }}
+      - node/install-packages
       - run:
-          name: Start app and test
-          command: |
-            npm install
-            npm run test
-      - save_cache:
-          key: node-modules-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-      - save_cache:
-          key: sut-node-modules-{{ checksum "packages/package.json" }}
-          paths:
-            - ./packages/node_modules/
+          command: npm run test
+orbs:
+  node: 'circleci/node:x.y'
+version: 2.1
+workflows:
+  test_my_app:
+    jobs:
+      - test
