--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
 node_modules
-screenshot
-screenshot/buy-article/full-user-delivery.png
-screenshot/buy-article/full-user-payer.png
-screenshot/buy-article/payment-method.png
-screenshot/buy-article/produtcs.png
+screenshot/*
