--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,14 @@ jobs:
       - image: circleci/node:latest-browsers
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
       - run: npm install
       - run: npm run test
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - store_artifacts:
+          path: ./screenshot/
