--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
     "puppeteer-core": "^3.1.0"
   },
   "jest": {
-    "preset": "jest-puppeteer"
+    "preset": "jest-puppeteer",
+    "reporters": [
+      [
+        "jest-junit", {
+          "suiteName": "SharePoint SPFx Testing",
+          "outputDirectory": "./reports/",
+          "outputName": "./junit.xml"
+        }
+      ]
+    ]
   },
   "repository": {
     "type": "git",
